--- a/day03-17-CSS/day09_元素定位-浮动/08_music_demo代码优化.css
+++ b/day03-17-CSS/day09_元素定位-浮动/08_music_demo代码优化.css
@@ -9,13 +9,40 @@ a {
   color: #333;
 }
 
+/* 设置公共的CSS属性 */
+.sprite_1 {
+  background-image: url(../images/music-iconall.png);
+  display: inline-block;
+}
+
+.sprite_2 {
+  background-image: url(../images/music_cover2.png);
+  display: inline-block;
+}
+
+
+
+.sprite_1_headset {
+  width: 14px;
+  height: 11px;
+  background-position: 0 -24px;
+}
+
+
+.sprite_2_play {
+  width: 16px;
+  height: 17px;
+  background-position: 0 0;
+}
+
+
+
+
+
 /* 整体居中 */
 .container {
-  /* position: relative; */
   left: 0;
   right: 0;
-  
-  /* background-color: #f40; */
   width: 140px;
   margin: auto;
   height: 188px;
@@ -38,7 +65,7 @@ a {
 
 /* 把封面覆盖在图片上面 */
 .container .top .cover {
-  background-image: url(../images/music_cover2.png);
+  /* background-image: url(../images/music_cover2.png); */
   position: absolute;
   top: 0;
   left: 0;
@@ -53,7 +80,7 @@ a {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url(../images/music_cover2.png);
+  /* background-image: url(../images/music_cover2.png); */
   
   height: 27px;
   background-position: 0 -537px;
@@ -63,15 +90,14 @@ a {
 
 
 /* 设置耳机的图标 */
-.container .top .bar .icon {
-  display: inline-block;
-  width: 14px;
-  height: 11px;
+.container .top .bar .icon-headset {
+  /* display: inline-block; */
+  /* width: 14px;
+  height: 11px; */
   /* background-color: #0f0; */
   position: absolute;
- 
-  background-image: url(../images/music-iconall.png);
-  background-position: 0 -24px;
+  /* background-image: url(../images/music-iconall.png); */
+  /* background-position: 0 -24px; */
   margin: 9px 5px 9px 10px
 }
 
@@ -84,12 +110,22 @@ a {
   top: 5px;
   font-size: 12px;
   color: #ccc;
-  
-  
 }
 
+/* 设置播放按钮 */
 
-
+.container .top .bar .icon-play {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  right: 10px;
+  /* display: inline-block; */
+  /* width: 16px;
+  height: 17px; */
+  /* background-image: url(../images/music-iconall.png); */
+  /* background-position: 0 0; */
+}
 
 
 /* 设置底部的文字 */
@@ -107,6 +143,5 @@ a {
 .container .bottom:hover {
   cursor: pointer;
 }
-
 
 
