--- a/day03-17-CSS/demo-网易云音乐/css/main.css
+++ b/day03-17-CSS/demo-网易云音乐/css/main.css
@@ -1,8 +1,9 @@
+
+
+/* 做topbar左边的布局 */
 .top {
   background-color: #242424;
 }
-
-
 
 
 
@@ -11,23 +12,160 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  line-height: 70px;
+  line-height: 69px;
   width: 1100px;
-  height: 70px;
-  background-color: #f40;
+  height: 69px;
+  /* background-color: #f40; */
   margin: 0 auto;
+  border-bottom: 1px solid #000;
 
+}
+
+.top .topbar .top-left {
+  display: flex;
+}
+
+.top .topbar .logo {
+  width: 176px;
+  height: 70px;
+  background-position: 0 0;
+}
+
+
+
+
+.top .topbar .top-left .list {
+  display: flex;
+  
+}
+
+
+
+.top .topbar .logo a {
+  background-image: url(../images/topbar.png);
+  display: block;
+  padding-right: 20px;
+  text-indent: -9999px;
+}
+
+
+
+
+.top .topbar .top-left .item {
+  position: relative;
+  display: block;
+  padding: 0 19px;
+  color: #ccc;
+  font-size: 14px;
+}
+
+
+.top .topbar .top-left .item:hover,
+.top .topbar .top-left .active {
+  background-color: #000;
+  color: #fff;
+}
+
+.top .topbar .top-left .item.active::after {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 7px;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  background-image: url(../images/topbar.png);
+  background-position: -226px 0;
+}
+
+
+
+
+.top .topbar .top-left .list .icon-hot {
+  position: absolute;
+  top: 21px;
+  right: -20px;
+  /* display: block;
+  background-image: url(../images/topbar.png);
+  width: 28px;
+  height: 19px;
+  background-position: -190px 0;
+   */
+  
+}
+
+
+/* 做topbar右边的布局 */
+
+
+.top .topbar .top-right {
+  display: flex;
+  align-items: center;
+  padding-right: 22px;
+}
+
+/* 给登录按钮做效果 */
+.top .topbar .login a {
+  color: #787878;
+}
+.top .topbar .login:hover a {
+  color: #666;
+}
+.top .topbar .login a:hover {
+  color: #787878;
+  text-decoration: underline;
+}
+
+
+/* 给创作者中心按钮做效果 */
+.top .topbar .author a {
+  display: inline-block;
+  /* display: block; */
+  
+  width: 90px;
+  height: 32px;
+  margin: 0 20px;
+  color: #ccc;
+  line-height: 32px;
+  text-align: center;
+  border: 1px solid #4f4f4f;
+  border-radius: 20px;
+  /* margin: 19px 0 0 12px; */
+}
+
+/* 创作者中心的hover状态 */
+.top .topbar .author a:hover {
+  color: #fff;
+  border-color: #fff;
 }
 
 
 
 
 
+/* 给搜索框做效果 */
 
+.top .topbar .top-right .search {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 
+  background-color: #fff;
+  width: 158px;
+  height: 32px;
+  border: 1px solid #000;
+  border-radius: 30px;
+  background: #fff url(../images/topbar.png) 0 -99px;
+}
 
+.topbar .top-right .search input {
+  width: 120px;
+  height: 16px;
+  margin-right: 10px;
+  line-height: 39px;
 
-
+}
 
 
 
