--- a/笔记汇总/通用代码汇总/001-CSS样式重置.css
+++ b/笔记汇总/通用代码汇总/001-CSS样式重置.css
@@ -9,7 +9,9 @@
 a {
   text-decoration: none;
   color: #333;
+  outline: none;
 }
+
 
 /* ul 和 li 去除样式 */
 ul, li {
@@ -25,6 +27,11 @@ i {
   font-style: normal;
 }
 
+
+input {
+  outline: none;
+  border: none;
+}
 
 
 
